// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED BY MIXGEN.

syntax = "proto3";


// The `checknothing` template represents an empty block of data, which can be useful
// in different testing scenarios.
// 
// Example config:
// 
// ```yaml
// apiVersion: "config.istio.io/v1alpha2"
// kind: instance
// metadata:
//   name: denyrequest
//   namespace: istio-system
// spec:
//   compiledTemplate: checknothing    
// ```
//
// CheckNothing represents an empty block of data that is used for Check-capable
// adapters which don't require any parameters. This is primarily intended for testing
// scenarios.
package checknothing;


import "gogoproto/gogo.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";
import "google/protobuf/any.proto";
import "mixer/adapter/model/v1beta1/check.proto";


option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_CHECK;
option (istio.mixer.adapter.model.v1beta1.template_name) = "checknothing";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.stable_marshaler_all) = true;

// HandleCheckNothingService is implemented by backends that wants to handle request-time 'checknothing' instances.
service HandleCheckNothingService {
    // HandleCheckNothing is called by Mixer at request-time to deliver 'checknothing' instances to the backend.
    rpc HandleCheckNothing(HandleCheckNothingRequest) returns (istio.mixer.adapter.model.v1beta1.CheckResult);
    
}

// Request message for HandleCheckNothing method.
message HandleCheckNothingRequest {

    // 'checknothing' instance.
    InstanceMsg instance = 1;

    // Adapter specific handler configuration.
    //
    // Note: Backends can also implement [InfrastructureBackend][https://istio.io/docs/reference/config/mixer/istio.mixer.adapter.model.v1beta1.html#InfrastructureBackend]
    // service and therefore opt to receive handler configuration during session creation through [InfrastructureBackend.CreateSession][TODO: Link to this fragment]
    // call. In that case, adapter_config will have type_url as 'google.protobuf.Any.type_url' and would contain string
    // value of session_id (returned from InfrastructureBackend.CreateSession).
    google.protobuf.Any adapter_config = 2;

    // Id to dedupe identical requests from Mixer.
    string dedup_id = 3;
}





// Contains instance payload for 'checknothing' template. This is passed to infrastructure backends during request-time
// through HandleCheckNothingService.HandleCheckNothing.
message InstanceMsg {

    // Name of the instance as specified in configuration.
    string name = 72295727;
    
}

// Contains inferred type information about specific instance of 'checknothing' template. This is passed to
// infrastructure backends during configuration-time through [InfrastructureBackend.CreateSession][TODO: Link to this fragment].
message Type {
    
}


// Represents instance configuration schema for 'checknothing' template.
message InstanceParam {
    
}

